[metadata]
name = IOXIDResolver
version = 1.0.0
author = mubix
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KptCheeseWhiz/IOXIDResolver

[options]
py_modules = IOXIDResolver
python_requires = >=3.0
install_requires = 
    impacket

[options.entry_points]
console_scripts =
    ioxidresolver = IOXIDResolver:main
